# talk-pycones21-documenta-escriba

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
calc/: __init__.py  dummy.py
docs/: Makefile  modules.rst
docs/source/: conf.py  index.rst  pycon.rst
