[tool.poetry]
name = "calc"
version = "0.1.0"
description = "Simplest calculator ever"
authors = ["J. Andrés Pizarro"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
darglint = "^1.8.0"
Sphinx = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
